# ohtu2022

./: README.md  referaatti.md  retro.md
viikko1/src/: .coverage  varasto_test.py
viikko1/varasto/src/: pyproject.toml
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  kirjanpito.py  pankki.py  varasto.py  viitegeneraattori.py
viikko3/hello-robot/: pyproject.toml
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/nhl-reader/src/: .player.py.swp  PlayerReader.py  PlayerStats.py  index.py  player.py
viikko3/web-login-robot/: pyproject.toml
viikko3/web-login-robot/src/tests/: login.robot  loginresource.robot  register.robot  resource.robot
viikko4/int-joukko/src/: int_joukko.py
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/src/tests/: kauppa_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: xxx
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: matchers.py
