[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["sanikemppainen <sani.kemppainen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
pylint = "^2.12.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
